deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: whoami
        image: docker.io/traefik/whoami
        ports:
        - containerPort: 8080
          name: http
